--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,18 @@
 .wrapper {
-    margin-top: 50px;
-    padding: 10px;
-    background: #ccc;
-    border-radius: 20px;
+  margin-top: 50px;
+  padding: 10px;
+  background: #ccc;
+  border-radius: 20px;
 }
 .margin-10 {
-    margin: 10px 0px;
+  margin: 10px;
 }
 label {
-    font-weight: bold;
+  font-weight: bold;
+}
+
+.description {
+  font-size: 2rem;
+  font-weight: bold;
+  margin: 0.5em;
 }
